SERVER-9876 place upper limit on the default oplog size cont